--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,26 @@
 <body>
     
         
+​
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-databa.js"></script>
+​
 
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-databa.js"></script>
-     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCfoLHOoi8t_gjhFcDDBIjadtxqF3NuHQQ",
+    authDomain: "el-formu.firebaseapp.com",
+    databaseURL: "https://el-formu.firebaseio.com",
+    projectId: "el-formu",
+    storageBucket: "el-formu.appspot.com",
+    messagingSenderId: "40809937070",
+    appId: "1:40809937070:web:63d6636fd38bd5df9cd53f"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <script src="js/index.js"></script>
 </body>
 </html>
