--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 ​
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-databa.js"></script>
-​
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
 
 <script>
   // Your web app's Firebase configuration
@@ -28,6 +27,6 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-    <script src="js/index.js"></script>
+     <script src="js/index.js"></script>
 </body>
 </html>
